# Freeloader

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  FEEDBACK.md  README.md  build.sh  hook.cpp  hook.hpp
docker/: Dockerfile.linuxserver  Dockerfile.plexinc  README.md  plex-docker-patch.sh  wrapper.sh
docs/: BUILD.md  DOCKER.md  WINDOWS.md
experimental/: debug_hook.c
linux/: CMakeLists.txt  README.md  build.sh  debug_hook.c  hook.hpp  main.cpp  plex-crack-wrapper.sh  readbitset.py
plex_relay/: README.md  conftest.py  pyproject.toml
plex_relay/src/plex_relay/: __init__.py  cache.py  cli.py  config.py  controller.py  errors.py  keys.py  models.py  store.py  tunnel.py
plex_relay/tests/: test_cache.py  test_config.py  test_controller.py  test_keys.py  test_models.py  test_store.py  test_tunnel.py
scripts/: plex-crack-wrapper.sh  readbitset.py
scripts/plex-tailnet/: README.md  headscale-server-setup.sh  plex-tailscale-setup.sh
scripts/plex-tailnet/lib/: common.sh  plex_prefs.py
src/: hook.cpp  hook.hpp  main.cpp  traffic_logger.cpp  traffic_logger.hpp  webhook_handler.cpp  webhook_handler.hpp
windows/: README.md  build.bat
windows/src/: dllmain.cpp  feature_patch.h  injector.cpp  log.h  pe_image.h  sig_scan.h  trampoline.h
