# SPDX-License-Identifier: AGPL-3.0-or-later
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "plex-relay"
version = "0.2.0"
description = "Reverse-engineered reimplementation of the Plex Media Server RelayController (educational / RE use)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Plex_Patch RE notes" }]
dependencies = []  # stdlib only

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
plex-relay = "plex_relay.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
plex_relay = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"